# cinder

./: .gitignore  main.py  main.tcss  pyproject.toml
cinder/: base_screen.py  condition_assignment.py  main.py  project.py  upload.py  upload.tcss  upload_raw_file.py  utility.py
cinder/cindergpt/: gpt.py
cinder/cinderproject/: modal_update_text_screen.tcss  project.py  project_manager_screen.tcss  project_screen.tcss
cinder/cindersettings/: settings.py  settings.tcss
cinder/main_screen/: main_screen.py  main_screen.tcss
cinder/management/commands/: download_project.py
cinder/util_screen/: modal_quit.py  modal_quit_screen.tcss  modal_update_text_screen.tcss
cinder/utils/: common.py
