[tool.poetry]
name = "cinder"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phung@proteo.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
textual = "^0.38.1"
httpx = "^0.25.0"
pandas = "^2.1.1"
textual-dev = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cinder = "cinder.upload:main"

