[tool.poetry]
name = "cinder"
version = "0.1.1"
description = ""
authors = ["Toan Phung <toan.phung@proteo.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
textual = "^0.44.1"
httpx = "^0.25.2"
pandas = "^2.1.4"
textual-dev = "^1.2.1"
openai = "^1.3.8"
python-on-whales = "^0.67.0"
appdirs = "^1.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cinder = "cinder.main:main"
cinder-project = "cinder.cinderproject.project:manage_project"

